# triton-kernels

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: __init__.py  bench_moe_dispatch.py  bench_quantized_matmul.py  bench_rmsnorm.py  bench_swiglu.py  full_roofline.py  utils.py
benchmarks/roofline/: moe_roofline.py
docs/: INT8_GEMM_INVESTIGATION.md  ROOFLINE_ANALYSIS.md  moe_dispatch.md
reference/: moe_reference.py
tests/: __init__.py  test_moe_dispatch.py  test_quantization.py  test_quantized_matmul.py  test_rmsnorm.py  test_swiglu.py
triton_kernels/: __init__.py  quantization.py  quantized_matmul.py  rmsnorm.py
triton_kernels/moe/: __init__.py  expert_gemm.py  fused_moe.py  permute.py  router.py
