[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-kernels"
version = "0.1.0"
description = "High-performance GPU kernels for LLM inference using OpenAI Triton"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Subhadip Mitra", email = "contact@subhadipmitra.com"}
]
keywords = ["triton", "gpu", "cuda", "llm", "inference", "kernels"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
]
bench = [
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
]
all = [
    "triton-kernels[dev,bench]",
]

[project.urls]
Homepage = "https://github.com/bassrehab/triton-kernels"
Repository = "https://github.com/bassrehab/triton-kernels"

[tool.setuptools.packages.find]
where = ["."]
include = ["triton_kernels*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"